--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "uncharted-validations",
+  "name": "ember-cli-uncharted-validations",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Extension of ember-validations for tracking component heirarchy and backend validation helpers.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -33,6 +33,9 @@
     "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
     "glob": "^4.0.5"
+  },
+  "dependencies": {
+    "ember-validations": "2.0.0-alpha.2"
   },
   "keywords": [
     "ember-addon"
